--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
           ACTION: 'start'
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           RUNNER_TYPE: 'spot'
-          REPO: 'alphagov/github-actions-runner-orchestration'
-          GITHUB_COMMIT: '${{ github.GITHUB_SHA }}'
+          REPO: '${{ github.repository }}'
+          GITHUB_COMMIT: '${{ github.sha }}'
           RUNNER_SUBNET: '${{ secrets.RUNNER_SUBNET }}'
           RUNNER_SG: '${{ secrets.RUNNER_SG }}'
           RUNNER_ACID: '${{ secrets.RUNNER_ACID }}'
