--- a/client/action.yml
+++ b/client/action.yml
@@ -1,9 +1,6 @@
 name: 'Get Runner'
 description: 'Get the GitHub Action runner'
 inputs:
-  GARO_URL:
-    description: 'URL for the GARO API'
-    required: true
   GITHUB_TOKEN:
     description: 'GitHub Token (do not set in settings)'
     required: true
@@ -20,6 +17,10 @@ inputs:
     description: 'External ID on the AWS IAM role'
     required: true
 
+  GARO_URL:
+    description: 'URL for the GARO API'
+    required: false
+    default: 'https://prod.co-cdio-garo.digital'
   ACTION:
     description: 'Action: start | state'
     required: false
