--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,8 @@ jobs:
     - run: |
         ls -lah main
         
+        whoami
+        
         sudo yum update
         sudo yum install -y git
         
