--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,10 @@ jobs:
 
         sudo yum update -y
 
+        echo $PATH
+
         ls -lah /usr/local/bin
-        sudo chown -r github:github /opt/tfenv/*
+        sudo chown -R github:github /opt/tfenv
         export PATH="/usr/local/bin:$PATH"
 
         cd main/garo_terraform/
