--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
       with:
         path: main
     - run: |
+        source ~/.bash_profile
         cd main/garo_terraform/
         tfenv install
         tfenv use
