--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,13 @@ jobs:
     - run: |
         source ~/.bash_profile
 
+        scversion="stable" # or "v0.4.7", or "latest"
+        curl -sLO "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz"
+        tar -xvf ./*.tar.xz
+        sudo cp "shellcheck-${scversion}/shellcheck" /usr/bin/local
+        sudo chmod +x /usr/bin/local/shellcheck
+        rm -rf ./shellcheck*
+
         cd main/
         make test-full
         make build-full
