--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,11 +43,11 @@ jobs:
         path: main
     - run: |
         source ~/.bash_profile
-
-        scversion="stable" # or "v0.4.7", or "latest"
+        
+        scversion="stable"
         curl -sLO "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz"
         tar -xvf ./*.tar.xz
-        sudo cp "shellcheck-${scversion}/shellcheck" /usr/bin/local
+        sudo cp "shellcheck-${scversion}/shellcheck" /usr/local/bin
         rm -rf ./shellcheck*
 
         cd main/
