--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
           RUNNER_TIMEOUT: '3600'
 
   use-staging-runner:
-    runs-on: [self-hosted, linux, spot, staging]
+    runs-on: [self-hosted, linux, spot, staging]d
+    defaults:
+      run:
+        shell: bash
     needs: get-runners
     steps:
     - name: Checkout
@@ -42,14 +45,6 @@ jobs:
       with:
         path: main
     - run: |
-        source ~/.bash_profile
-        
-        scversion="stable"
-        curl -sLO "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz"
-        tar -xvf ./*.tar.xz
-        sudo cp "shellcheck-${scversion}/shellcheck" /usr/local/bin
-        rm -rf ./shellcheck*
-
         cd main/
         make test-full
         make build-full
