--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,8 @@ jobs:
         terraform workspace list
         terraform workspace select staging
         terraform apply -auto-approve
+        
+        sleep 5
 
   get-test-staging-runner:
     name: Start a runner using the staging API
@@ -140,6 +142,8 @@ jobs:
         terraform workspace list
         terraform workspace select prod
         terraform apply -auto-approve
+        
+        sleep 5
 
   get-test-prod-runner:
     environment: aws_dev
